fix: various logging issues

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -5,3 +5,6 @@ Schön, dass du dich dazu entschieden hast dem einfach-vegan Discord zu joinen u
 Dankeschön, dass du daran partizipierst diesen Planeten zu einem besseren Ort zu machen. 💚
 permissions.manageChannels.error=Du kannst keine Nachrichten verwalten.
 permissions.general.error=Du hast nicht die Berechtigung dazu, dies zu tun.
+actions.kick=Kicken
+actions.ban=Bannen
+actions.delete=Löschen
