feat: guild pronoun text

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -8,3 +8,6 @@ permissions.general.error=Du hast nicht die Berechtigung dazu, dies zu tun.
 actions.kick=Kicken
 actions.ban=Bannen
 actions.delete=Löschen
+guild.pronouns=Wie möchtest du angesprochen werden? Bitte wähle deine Pronomen.
+
+Personalpronomen sind Teil deiner (geschlechtlichen) Identität und Selbstbestimmung. Wir fordern ein respektvolles Miteinander, fördern Akzeptanz und Toleranz für eine gendergerechte und -neutrale Sprache und wehren uns gegen Diskriminierung und Ungleichstellung. Auch wenn dir die Ansprache selbst nicht so wichtig erscheint, zeigst du dich solidarisch und unterstützt die Schaffung eines Safe Spaces. Solltest du dir im Alltag nicht sicher sein, sprich die Person beim Vornamen an oder frag nach den Pronomen.
